# vtext

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  FINAL_REPORT_投资训练营.md  OUTPUT_BEHAVIOR.md  README.md  failed_70_videos.txt  failed_transcription_report.md  pyproject.toml
.claude/plans/: add-batch-output-dir.md
docs/: README.md  deployment.md  design.md  models.md
docs/00_project/: README.md  overview.md  status.md  task-board.md
docs/20_architecture/: README.md  api.md  architecture.md  design.md  output-contracts.md
docs/40_development/: README.md  environment.md
docs/60_operations/: README.md  vbook-text-integration.md  windows-linux-agent-coordination.md
docs/70_progress/: 2026-07-07-vbook-text-contract.md  README.md
docs/90_reference/: README.md  vbook-text-integration-response.md
scripts/: archive_to_vault.py  batch_extract.py  fix_vault_fold.py  retry_70_no_compress.py  retry_70_simple.py  retry_remaining.py  vtext-service.sh
sync/: PROTOCOL.md
sync/c2s/: .gitkeep  000001-20260617T144221Z-9aea32a3.json  000002-20260617T150717Z-b071bc4b.json  000003-20260618T020856Z-5b3e815b.json  000004-20260618T022008Z-0bc16c1d.json  000005-20260622T122020Z-ef1a5ff9.json  (+6 more)
vtext_client/: __init__.py  __main__.py  _batchprogress.py  api.py  audio.py  batch.py  cli.py  config.py  errors.py  manifest.py  refine.py
vtext_common/: __init__.py  config.py  formats.py  types.py
vtext_server/: __init__.py  __main__.py  app.py  config.py  errors.py  llm_client.py  llm_queue.py  llm_worker.py  logging_setup.py  models.py  queue.py  transcriber.py  worker.py
(+47 files in other folders)
